fix(onboard/scrollbar toc): add a scrollbar to TOC

--- a/packages/gatsby-theme-styleguide/src/gatsby-components/TableOfContents/tableofcontents.scss
+++ b/packages/gatsby-theme-styleguide/src/gatsby-components/TableOfContents/tableofcontents.scss
@@ -12,10 +12,11 @@
     padding-left: 1.5rem;
     padding-top: 1rem;
     padding-bottom: 1rem;
-    margin-top: 1rem;
     top: 0;
     position: sticky;
     border-left: solid 1px #f5f5f5;
+    max-height: 90vh;
+    overflow-y: auto;
   }
 
   &__title {
